kubernetes/test-service-helm-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-spring-boot-service
  namespace: test-namespace
spec:
  selector:
    app: test-spring-boot-service
  type: LoadBalancer
  ports:
    - name: "public"
      protocol: "TCP"
      port: 8080
      targetPort: 8080
      nodePort: 30080
    - name: "actuator"
      protocol: "TCP"
      port: 8090
      targetPort: 8090
      nodePort: 30090
