kubernetes/test-service-helm-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-spring-boot-service-ingress
  namespace: test-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    name: rewrite
spec:
  ingressClassName: nginx
  rules:
    - host: "test-spring-boot-service"
      http:
        paths:
          - backend:
              service:
                name: test-spring-boot-service
                port:
                  number: 8080
            pathType: Prefix
            path: /
    - host: "test-spring-boot-service-actuator"
      http:
        paths:
          - backend:
              service:
                name: test-spring-boot-service
                port:
                  number: 8090
            pathType: Prefix
            path: /
